--- a/css/main.css
+++ b/css/main.css
@@ -667,10 +667,10 @@ hr {
 }
 
 #hero-area .contents .head-title {
-  color: #585b60;
+  color: #e97f01;
   text-transform: uppercase;
-  font-size: 30px;
-  line-height: 48px;
+  font-size: 60px;
+  line-height: auto;
   font-weight: 700;
   margin-bottom: 30px;
 }
