--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -667,7 +667,7 @@ hr {
 }
 
 #hero-area .contents .head-title {
-  color: #585b60;
+  color: #e97f01;
   text-transform: uppercase;
   font-size: 56px;
   line-height: 70px;
